# research-derived-experiments

./: .gitignore  AGENTS.md  README.md  TODO.md  pyproject.toml
coherence-testbench/: .env.example  .gitignore  MODALITY_COMPARISON.md  MORNING_BRIEF.md  NEXT_STEPS.md  PHASE0_TODO.md  POST_MORTEM.md  QUIZ_VERIFICATION.md  README.md  pyproject.toml
coherence-testbench/config/: kill_criterion.yaml  kill_criterion_eeg_labram.yaml  kill_criterion_eyetrack.yaml  kill_criterion_eyetrack_quiz.yaml  phase0.yaml  phase0_eyetrack.yaml  phase0_eyetrack_quiz.yaml  phase0_eyetrack_quiz_residual.yaml  phase0_labram.yaml
coherence-testbench/docs/: bbbd_label_protocol.md  foundation_model_options.md  labram_integration.md
coherence-testbench/modal_jobs/: prepare_bbbd.py  train.py  train_eyetrack.py  train_eyetrack_quiz.py  train_eyetrack_quiz_residual.py  train_labram.py
coherence-testbench/scripts/: env_probe.py  generate_report.py  run_phase0.py  spawn_phase0.py
coherence-testbench/site/: .railwayignore  index.html  package.json  railway.json
coherence-testbench/src/coherence/: __init__.py  config.py
coherence-testbench/src/coherence/decoders/: __init__.py  baseline.py  cross_subject.py  eyetrack.py  eyetrack_regression.py
coherence-testbench/src/coherence/evaluate/: __init__.py  leave_subjects_out.py
coherence-testbench/src/coherence/ingest/: __init__.py  bbbd.py  eyetrack.py
coherence-testbench/src/coherence/preprocess/: __init__.py  eyetrack_features.py  pipeline.py
coherence-testbench/src/coherence/report/: __init__.py  go_kill_report.py
coherence-testbench/supabase/: schema.sql
coherence-testbench/tests/: test_kill_criterion.py  test_smoke_pipeline.py
docs/: causally_grounded_agents_benchmark.md  causally_grounded_agents_next_gap.md  causally_grounded_agents_release_schema.json  causally_grounded_agents_release_schema.md  claim_registry.json  comprehensive_literature_review.md  concern_gated_retrieval_research_program.md  discovery_regime_audit.md  experiment_contract_registry.json  external_contact_preregistration.md  external_contact_runbook.md  gauge_fixed_concern_transport_experiment_audit.md  handoff_2026_06_22.md  metaphysics_complete_reading_notes_2026_07_09.md  metaphysics_of_intelligence_reading_log.md  module_explainer.md  neurophenom_project_approach_menu.md  next_agent_audit_and_queue_2026-07-13.md  next_agent_concern_gated_retrieval_handoff_2026-07-23.md  next_agent_envelope_guard_product_ct_chs_handoff_2026-07-21.md  next_agent_evidence_infra_coordination_2026-07-14.md  next_agent_evidence_infra_peer_status_2026-07-15.md  next_agent_evidence_infrastructure_handoff_2026-07-14.md  next_agent_evidence_infrastructure_remaining_handoff_2026-07-14.md  next_agent_grounded_harness_experiments_handoff_2026-07-20.md  next_agent_handoff_2026-07-13.md  next_agent_modal_handoff.md  next_agent_u2_contract_registry_handoff_2026-07-14.md  paper_readiness.md  phase2_breakthrough_trajectory.md  phase2_clean_context_handoff.md  phase2_next_agent_handoff.md  phase2_next_breakthrough_handoff.md  phase2_next_phase_research_handoff.md  phase2_semantic_profile_discovery_handoff.md  program_evidence_registry.json  publication_sharing_map.md  railway-autodeploy.md  semantic_specificity.md  system_design.md  (+2 more)
experiments/: README.md
formal/ontology-hs/: README.md  concerned-ontology.cabal
formal/ontology-hs/app/: Main.hs
formal/ontology-hs/src/: ConcernedOntology.hs
formal/ontology-hs/test/: Main.hs
notes/: geometric_convergence_research_synthesis.md  reward_deformation_ratedistortion.md  virtual_governor_alignment_fit.md  weakness_topology_program_synthesis.md  webb_miolane_fit.md
references/: SOURCES.md  levin_recent_papers_2026_06.md  philosophy_claim_boundaries.md  science_methodology_claim_boundaries.md  webb-miolane-geometry-of-consciousness-transcript.md
schemas/: claim_registry.schema.json  experiment_contract_registry.schema.json  experiment_manifest.schema.json  gate_verdict.schema.json  program_evidence_registry.schema.json  public_artifact_envelope.schema.json
scripts/: _patch_figure_titles.py  analyze_gridcell_conference_evidence.py  build_cogr_wave0_pdf.py  build_cogr_wave1a_pdf.py  build_commitment_surface_pdf.py  build_comprehensive_literature_review_paper_pdf.py  build_comprehensive_literature_review_pdf.py  build_gridcell_pdf.py  (+93 more)
(+1318 files in other folders)
